--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
 
+    <!-- Favicion -->
+    <link rel="icon" type="image/x-icon" href="~/icon.ico">
+
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Raleway:wght@600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
@@ -23,26 +26,20 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet" />
+
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
     <!-- Navbar start -->
-        <div class="container-fluid fixed-top">
-            <div class="container topbar bg-primary d-none d-lg-block">
-                <div class="d-flex justify-content-between">
-                    <div class="top-info ps-2">
-                        <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Street, New York</a></small>
-                        <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Email@Example.com</a></small>
-                    </div>
-                    <div class="top-link pe-2">
-                        <a href="#" class="text-white"><small class="text-white mx-2">Privacy Policy</small>/</a>
-                        <a href="#" class="text-white"><small class="text-white mx-2">Terms of Use</small>/</a>
-                        <a href="#" class="text-white"><small class="text-white ms-2">Sales and Refunds</small></a>
-                    </div>
-                </div>
-            </div>
+        <div class="container-fluid">
+          
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">Fruitables</h1></a>
+                <a href="/Index" class="navbar-brand">
+                    <h1 class="text-primary display-6">
+                        <img class="brand-icon" src="~/img/icon.png" alt="Icon" /> Hôm nay ăn gì
+                    </h1>
+                </a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
@@ -68,7 +65,7 @@
                                 <i class="fa fa-shopping-bag fa-2x"></i>
                                 <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                             </a>
-                            <a href="#" class="my-auto">
+                            <a href="/Login" class="my-auto">
                                 <i class="fas fa-user fa-2x"></i>
                             </a>
                         </div>
@@ -90,22 +87,17 @@
                 <div class="row g-4">
                     <div class="col-lg-3">
                         <a href="#">
-                            <h1 class="text-primary mb-0">Fruitables</h1>
-                            <p class="text-secondary mb-0">Fresh products</p>
+                            <h1 class="text-primary mb-0">Hôm nay ăn gì</h1>
+                            <p class="text-secondary mb-0">Nấu ăn khó, cứ để Hôm nay ăn gì lo</p>
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <div class="position-relative mx-auto">
-                            <input class="form-control border-0 w-100 py-3 px-4 rounded-pill" type="number" placeholder="Your Email">
-                            <button type="submit" class="btn btn-primary border-0 border-secondary py-3 px-4 position-absolute rounded-pill text-white" style="top: 0; right: 0;">Subscribe Now</button>
-                        </div>
+                        
                     </div>
                     <div class="col-lg-3">
                         <div class="d-flex justify-content-end pt-3">
-                            <a class="btn  btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-                            <a class="btn btn-outline-secondary btn-md-square rounded-circle" href=""><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-secondary me-2 btn-md-square rounded-circle" href="#"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
@@ -178,6 +170,34 @@
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
+    <!-- Toast Success Container -->
+    <input type="hidden" id="toastSuccessMessage" value="@ViewBag.SuccessMessage">
+    <div class="toast-container position-absolute end-0 p-3" style="z-index: 11; bottom: 78%">
+        <!-- Toast -->
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="successToast">
+            <div class="toast-header" style="background-color: #20c997">
+                <strong class="mr-auto" style="color: white">THÀNH CÔNG</strong>
+            </div>
+            <div class="toast-body">
+                <span id="toastSuccessMessageContent" style="font-size: 16px"></span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Toast Error Container -->
+    <input type="hidden" id="toastErrorMessage" value="@ViewBag.ErrorMessage">
+    <div class="toast-container position-absolute end-0 p-3" style="z-index: 11; bottom: 80%">
+        <!-- Toast -->
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" id="errorToast">
+            <div class="toast-header" style="background-color: #DC3545">
+                <strong class="mr-auto" style="color: white">ĐÃ CÓ LỖI XẢY RA</strong>
+            </div>
+            <div class="toast-body">
+                <span id="toastErrorMessageContent" style="font-size: 16px"></span>
+            </div>
+        </div>
+    </div>
+
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -189,6 +209,40 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let toastSuccessMessage = document.getElementById("toastSuccessMessage");
+            let toastSuccessMessageContent = document.getElementById("toastSuccessMessageContent");
+
+            // Kiểm tra xem input hidden có nội dung không
+            if (toastSuccessMessage && toastSuccessMessage.value) {
+                // Hiển thị nội dung của toast
+                toastSuccessMessageContent.innerText = toastSuccessMessage.value;
+
+                // Hiển thị toast
+                var successToast = new bootstrap.Toast(document.getElementById('successToast'));
+                successToast.show();
+            }
+        });
+    </script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let toastErrorMessage = document.getElementById("toastErrorMessage");
+            let toastErrorMessageContent = document.getElementById("toastErrorMessageContent");
+
+            // Kiểm tra xem input hidden có nội dung không
+            if (toastErrorMessage && toastErrorMessage.value) {
+                // Hiển thị nội dung của toast
+                toastErrorMessageContent.innerText = toastErrorMessage.value;
+
+                // Hiển thị toast
+                var errorToast = new bootstrap.Toast(document.getElementById('errorToast'));
+                errorToast.show();
+            }
+        });
+    </script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
