--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -26,8 +26,11 @@
 
     <!-- Template Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet" />
-
+     
     <link href="~/css/site.css" rel="stylesheet" />
+
+    <!-- Tuan Anh css-->
+    <link href="~/css/tuananh.css" rel="stylesheet"/>
 </head>
 <body>
     <!-- Navbar start -->
