--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -30,9 +30,9 @@
 
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body>
+<body class="bg-light">
     <!-- Navbar start -->
-        <div class="container-fluid">
+        <div class="container-fluid bg-white">
           
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
