update: change login and signup input tag background color

--- a/HomNayAnGi/HomNayAnGiApp/Pages/Login/Index.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Login/Index.cshtml
@@ -14,11 +14,11 @@
             <div class="row g-3">
                 <div class="col-12">
                     <label>Tên đăng nhập</label>
-                    <input asp-for="LoginRequestDto.Username" class="form-control bg-light border-0 px-4" style="height: 55px;" required>
+                    <input asp-for="LoginRequestDto.Username" class="form-control bg-white border-0 px-4" style="height: 55px;" required>
                 </div>
                 <div class="col-12">
                     <label>Mật khẩu</label>
-                    <input asp-for="LoginRequestDto.Password" type="password" class="form-control bg-light border-0 px-4" style="height: 55px;" required>
+                    <input asp-for="LoginRequestDto.Password" type="password" class="form-control bg-white border-0 px-4" style="height: 55px;" required>
                 </div>
                 <div class="col-12">
                     <input asp-for="LoginRequestDto.DeviceId" id="deviceId" type="hidden" required>
