--- a/HomNayAnGi/HomNayAnGiApp/Pages/Signup/VerifyOTP.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Signup/VerifyOTP.cshtml
@@ -13,7 +13,7 @@
         <form method="post" onsubmit="return validateOtpForm()">
             <div class="row g-3">
                 <div class="col-12">
-                    <input asp-for="EnteredOtp" class="form-control bg-light border-0 px-4" style="height: 55px;" id="enterdOtp" placeholder="Nhập mã OTP vào đây" required>
+                    <input asp-for="EnteredOtp" class="form-control bg-white border-0 px-4" style="height: 55px;" id="enterdOtp" placeholder="Nhập mã OTP vào đây" required>
                     <div class="invalid-feedback" id="invalid-otp-feedback">OTP phải là chuỗi có 6 chữ số.</div>
                 </div>
                 <div class="col-12">
