--- a/HomNayAnGi/HomNayAnGiApp/Pages/Signup/Index.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Signup/Index.cshtml
@@ -14,19 +14,19 @@
             <div class="row g-3">
                 <div class="col-12">
                     <label>Tên đăng nhập</label>
-                    <input asp-for="SignupViewModel.Username" class="form-control bg-light border-0 px-4" style="height: 55px;" id="username" required>
+                    <input asp-for="SignupViewModel.Username" class="form-control bg-white border-0 px-4" style="height: 55px;" id="username" required>
                     <div class="invalid-feedback" id="invalid-username-feedback">Tên đăng nhập không được để trống.</div>
                     <span asp-validation-for="SignupViewModel.Username" class="text-danger"></span>
                 </div>
                 <div class="col-12">
                     <label>Email</label>
-                    <input asp-for="SignupViewModel.Email" class="form-control bg-light border-0 px-4" style="height: 55px;" id="email" required>
+                    <input asp-for="SignupViewModel.Email" class="form-control bg-white border-0 px-4" style="height: 55px;" id="email" required>
                     <div class="invalid-feedback" id="invalid-email-feedback">Vui lòng nhập địa chỉ email hợp lệ.</div>
                     <span asp-validation-for="SignupViewModel.Email" class="text-danger"></span>
                 </div>
                 <div class="col-12">
                     <label>Mật khẩu</label>
-                    <input asp-for="SignupViewModel.Password" type="password" class="form-control bg-light border-0 px-4" style="height: 55px;" id="password" required>
+                    <input asp-for="SignupViewModel.Password" type="password" class="form-control bg-white border-0 px-4" style="height: 55px;" id="password" required>
                     <div class="invalid-feedback">
                         Mật khẩu phải có ít nhất 8 ký tự, bao gồm 1 chữ in hoa, 1 chữ in thường, 1 số và 1 ký tự đặc biệt.
                     </div>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="col-12">
                     <label>Nhập lại mật khẩu</label>
-                    <input asp-for="SignupViewModel.ConfirmPassword" type="password" class="form-control bg-light border-0 px-4" style="height: 55px;" id="confirmPassword" required>
+                    <input asp-for="SignupViewModel.ConfirmPassword" type="password" class="form-control bg-white border-0 px-4" style="height: 55px;" id="confirmPassword" required>
                     <div class="invalid-feedback">Mật khẩu không khớp.</div>
                     <span asp-validation-for="SignupViewModel.ConfirmPassword" class="text-danger"></span>
                 </div>
