--- a/HomNayAnGi/HomNayAnGiApp/Pages/Recipes/List.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Recipes/List.cshtml
@@ -47,20 +47,20 @@
 				<a href="/Recipes/Details?id=@item.RecipeId" class="card">
 
 				
-					<img style="height:250px" height="300" src="@item.Image" alt="Bữa cơm nhà" class="card-image">
+					<img style="height:250px; padding-top:10px" height="300" src="@item.Image" alt="Bữa cơm nhà" class="card-image">
 					<div class="card-content">
 						<h3 class="card-title">@item.RecipeName</h3>
 						<p class="card-description">
 							@item.Description
 						</p>
 						<div class="card-info">
-							<span><i class="bi bi-clock"></i> @item.PrepTime phút</span> • <span><i class="bi bi-people"></i> @item.Servings người</span>•
+							<span><i class="bi bi-clock"></i> @item.PrepTime phút</span> • <span><i class="bi bi-people"></i> @item.Servings Người</span>•
 							<span>   <i class="bi bi-book pt-5"></i> @item.CategoryName</span>
 						</div>
-							<div class="card-author">
-								<i class="bi-person-fill" style="font-size: 23px; color: black;"></i>
-								<span> @item.UserName </span>
-							</div>
+						<div class="card-author">
+							<i class="bi bi-person-fill" style="font-size: 23px; color: black!important;"></i>
+							<span style=" color: black!important;"> @item.UserName </span>
+						</div>
 					</div>
 		
 				</a>
