done recipe cate

--- a/HomNayAnGi/HomNayAnGiApp/Pages/Login/Index.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Login/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="col-12">
                     <input asp-for="LoginRequestDto.DeviceId" id="deviceId" type="hidden" required>
                     <button class="btn btn-primary w-100 py-3 text-white" type="submit">ĐĂNG NHẬP</button>
-                    <a href="/ForgotPassword" style="float: right; font-style: italic; text-decoration: none; margin-top: 10px">Quên mật khẩu</a>
+                    <a href="/Login/ForgotPassword" style="float: right; font-style: italic; text-decoration: none; margin-top: 10px">Quên mật khẩu</a>
                 </div>
                 <div class="col-12 text-center">
                     <label>Hoặc</label>
