--- a/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
+++ b/HomNayAnGi/HomNayAnGiApp/Pages/Shared/_Layout.cshtml
@@ -63,6 +63,7 @@
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="/Recipes/Category" class="nav-item nav-link">Category</a>
                         </div>
                         <div class="d-flex m-3 me-0">
                             <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
